@@ -110,10 +110,6 @@ class ConfigInvoker extends BaseInvoker implements IConfigInvoker {
    * @param arguments - A {@link GroupConfigMethodArguments} object.
    */
   public void invokeBeforeGroupsConfigurations(GroupConfigMethodArguments arguments) {
-    if (arguments.isGroupFilteringDisabled()) {
-      return;
-    }
-
     List<ITestNGMethod> filteredMethods = Lists.newArrayList();
     String[] groups = arguments.getTestMethod().getGroups();
 
@@ -165,10 +161,6 @@ class ConfigInvoker extends BaseInvoker implements IConfigInvoker {
     // (only a method that belongs to a group can trigger the invocation
     // of afterGroups methods)
     if (arguments.getTestMethod().getGroups().length == 0) {
-      return;
-    }
-
-    if (arguments.isGroupFilteringDisabled()) {
       return;
     }
 
